// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shoud render box with image 1`] = `
<DocumentFragment>
  <div
    class="image-box"
  >
    <img
      alt="image"
      src="./img.png"
    />
    <div
      class="image-box__inner"
    >
      <div
        class="column column_jc-c column_ai-c "
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Shoud render box without image 1`] = `
<DocumentFragment>
  <div
    class="image-box"
  >
    <div
      class="image-box__inner"
    >
      <div
        class="column column_jc-c column_ai-c "
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
